03-ingress/k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          imagePullPolicy: IfNotPresent
          image: k8s-app-test:latest
          ports:
            - containerPort: 5051
