03-ingress/k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: app
  ports:
    - port: 80
      targetPort: 5051
      nodePort: 30000
  type: NodePort
