03-ingress/k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: app.local
      http:
        paths:
          - path: /app/(.*)
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 80
